crates/lexer/src/snapshots/lexer__tests__number_exponent_negative.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: NUMBER,
            offset: 0,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 6,
        },
    ],
)
