crates/lexer/src/snapshots/lexer__tests__number_fraction_exponent.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: NUMBER,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 7,
        },
    ],
)
