crates/lexer/src/snapshots/lexer__tests__number_fraction_exponent_positive.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: NUMBER,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 8,
        },
    ],
)
