crates/lexer/src/snapshots/lexer__tests__operator_purs.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: LEFT_ARROW,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 2,
        },
        Token {
            kind: LEFT_ARROW,
            offset: 3,
        },
        Token {
            kind: WHITESPACE,
            offset: 6,
        },
        Token {
            kind: RIGHT_ARROW,
            offset: 7,
        },
        Token {
            kind: WHITESPACE,
            offset: 9,
        },
        Token {
            kind: RIGHT_ARROW,
            offset: 10,
        },
        Token {
            kind: WHITESPACE,
            offset: 13,
        },
        Token {
            kind: RIGHT_DOUBLE_ARROW,
            offset: 14,
        },
        Token {
            kind: WHITESPACE,
            offset: 16,
        },
        Token {
            kind: RIGHT_DOUBLE_ARROW,
            offset: 17,
        },
        Token {
            kind: WHITESPACE,
            offset: 20,
        },
        Token {
            kind: DOUBLE_COLON,
            offset: 21,
        },
        Token {
            kind: WHITESPACE,
            offset: 23,
        },
        Token {
            kind: DOUBLE_COLON,
            offset: 24,
        },
        Token {
            kind: WHITESPACE,
            offset: 27,
        },
        Token {
            kind: FORALL,
            offset: 28,
        },
        Token {
            kind: WHITESPACE,
            offset: 31,
        },
        Token {
            kind: EQUALS,
            offset: 32,
        },
        Token {
            kind: WHITESPACE,
            offset: 33,
        },
        Token {
            kind: DOT,
            offset: 34,
        },
        Token {
            kind: WHITESPACE,
            offset: 35,
        },
        Token {
            kind: BACKSLASH,
            offset: 36,
        },
        Token {
            kind: WHITESPACE,
            offset: 37,
        },
        Token {
            kind: PIPE,
            offset: 38,
        },
        Token {
            kind: WHITESPACE,
            offset: 39,
        },
        Token {
            kind: AT,
            offset: 40,
        },
        Token {
            kind: END_OF_FILE,
            offset: 41,
        },
    ],
)
