crates/lexer/src/snapshots/lexer__tests__operator_source.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: SOURCE_OPERATOR,
            offset: 0,
        },
        Token {
            kind: WHITESPACE,
            offset: 3,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 4,
        },
        Token {
            kind: WHITESPACE,
            offset: 7,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 8,
        },
        Token {
            kind: WHITESPACE,
            offset: 11,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 12,
        },
        Token {
            kind: WHITESPACE,
            offset: 14,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 15,
        },
        Token {
            kind: WHITESPACE,
            offset: 17,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 18,
        },
        Token {
            kind: WHITESPACE,
            offset: 19,
        },
        Token {
            kind: SOURCE_OPERATOR,
            offset: 20,
        },
        Token {
            kind: END_OF_FILE,
            offset: 22,
        },
    ],
)
