crates/lexer/src/snapshots/lexer__tests__qualified_upper.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: MODULE_NAME_PREFIX,
            offset: 0,
        },
        Token {
            kind: SOURCE_PROPER,
            offset: 7,
        },
        Token {
            kind: WHITESPACE,
            offset: 11,
        },
        Token {
            kind: MODULE_NAME_PREFIX,
            offset: 12,
        },
        Token {
            kind: SOURCE_PROPER,
            offset: 22,
        },
        Token {
            kind: END_OF_FILE,
            offset: 26,
        },
    ],
)
