crates/lexer/src/snapshots/lexer__tests__raw_string.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Lexed {
            kind: RAW_STRING,
            offset: 0,
        },
        Lexed {
            kind: END_OF_FILE,
            offset: 22,
        },
    ],
)
