crates/lexer/src/snapshots/lexer__tests__raw_string_double_start.snap
---
source: crates/lexer/src/tests.rs
snapshot_kind: text
---
Ok(
    [
        Token {
            kind: RAW_STRING,
            offset: 0,
        },
        Token {
            kind: END_OF_FILE,
            offset: 9,
        },
    ],
)
